[package]
name = "playground_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "threadpool", "lab", "tokio-lab", "rust-servers-book"
]
# Not used yet
#rand = "0.8.5"
#parking_lot = "0.12.0"
#dashmap = "5.2.0"
